# lychee

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .lycheecache  .pre-commit-hooks.yaml  BOUNTY-1605-SOLUTION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile-CI.Dockerfile  Dockerfile-CI.alpine.Dockerfile  LICENSE-MIT  Makefile  README.md  TROUBLESHOOTING.md  clippy.toml  default.nix  example.md  fix.py  fix2.py  fix3.py  fix4.py  fix_cargo_toml.py  fix_cargo_toml2.py  fix_cargo_toml3.py  fix_cargo_toml4.py  fix_cli.py  fix_error.py  fix_error2.py  fix_error3.py  fix_error4.py  fix_error5.py  flake.nix  ideas.md  lychee.example.toml  lychee.toml  pyproject.toml  release-plz.toml  (+6 more)
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml  release.yml
assets/: screencast.sh
benches/: Cargo.toml  README.md
benches/src/: extract.rs
cli-fallback/: Cargo.toml
cli-fallback/src/: lib.rs
cli-fallback/tests/: smoke.rs
docs/: TROUBLESHOOTING.md
examples/archive/: Cargo.toml  LICENSE-APACHE  archive.rs
examples/builder/: Cargo.toml  builder.rs
examples/chain/: Cargo.toml  LICENSE-MIT  chain.rs
examples/client_pool/: Cargo.toml  client_pool.rs
examples/collect_links/: Cargo.toml  collect_links.rs
examples/extract/: Cargo.toml  extract.rs
fixtures/: FRAGMENT_REGRESSION.md  INTERNET_ARCHIVE.md  LINK_PERIOD.html  TEST.html  TEST.md  TEST_404.md  TEST_ALL_PRIVATE.md  TEST_ANCHORS.html  TEST_CODE_BLOCKS.md  TEST_DATA_URIS.html  TEST_DETAILED_JSON_OUTPUT_ERROR.md  TEST_DUMP_EXCLUDE.txt  TEST_EMAIL.md  TEST_EMAIL_QUERY_PARAMS.html  TEST_EMAIL_QUERY_PARAMS.md  TEST_EXAMPLE_DOMAINS.md  TEST_EXAMPLE_DOMAINS_FALSE_POSITIVES.md  TEST_EXCLUDE_1.txt  TEST_EXCLUDE_2.txt  TEST_FRAGMENT_ERR_CODE.md  TEST_GITHUB.md  TEST_GITHUB_404.md  TEST_GITHUB_TOKEN.md  (+25 more)
lychee-bin/: 600c0d6d-eacd-4fba-bef0-bd79a4da72c2.json  CHANGELOG.md  Cargo.toml  LICENSE-MIT  build.rs
lychee-bin/complete/: .gitignore  README.md  _lychee  _lychee.ps1  lychee.bash  lychee.elv  lychee.fish
lychee-bin/src/: cache.rs  client.rs  color.rs  files_from.rs  hints.rs  host_stats.rs  lychee_progress_bar.rs  main.rs  options.rs  parse.rs  progress.rs  stats.rs  time.rs  verbosity.rs
lychee-bin/src/archive/: mod.rs
lychee-bin/src/archive/wayback/: mod.rs
lychee-bin/src/commands/: check.rs  dump.rs  dump_inputs.rs  generate.rs  helpers.rs  mod.rs
lychee-bin/src/config/: header.rs  mod.rs  output.rs  tls.rs
lychee-bin/src/config/loaders/: cargo_toml.rs  lychee_toml.rs  mod.rs  package_json.rs  pyproject_toml.rs
lychee-bin/src/formatters/: color.rs  duration.rs  hints.rs  log.rs  mod.rs  progress.rs  response.rs  suggestion.rs
lychee-bin/src/formatters/host_stats/: compact.rs  detailed.rs  json.rs  markdown.rs  mod.rs
lychee-bin/src/formatters/response/: color.rs  emoji.rs  mod.rs  plain.rs  raw.rs  task.rs
lychee-bin/src/formatters/stats/: compact.rs  detailed.rs  json.rs  junit.rs  markdown.rs  mod.rs  raw.rs  response.rs  suggestion.rs
lychee-bin/src/suggest_alternative/: mod.rs
lychee-bin/src/writer/: compact.rs  detailed.rs  json.rs  markdown.rs  mod.rs
lychee-bin/tests/: cli.rs  data_uris.rs  dump_inputs.rs  example_domains.rs  local_files.rs  rate_limit.rs  recursion.rs  usage.rs
lychee-lib/: CHANGELOG.md  Cargo.toml
lychee-lib/benches/: extract.rs
lychee-lib/src/: cache.rs  checker.rs  client.rs  client_pool.rs  collector.rs  extract.rs  fs.rs  fs_tree.rs  lib.rs  remap.rs  retry.rs  retryable.rs  stream_lib.rs  test_utils.rs  uri.rs  waiter.rs
lychee-lib/src/archive/: mod.rs
lychee-lib/src/archive/wayback/: mod.rs
lychee-lib/src/async_lib/: mod.rs  stream.rs  waiter.rs
lychee-lib/src/async_lib/cache/: entry.rs  iter.rs  mod.rs
lychee-lib/src/basic_auth/: mod.rs
lychee-lib/src/chain/: mod.rs
lychee-lib/src/checker/: file.rs  mail.rs  mod.rs  redirect_tracker.rs  text_fragments.rs  website.rs
lychee-lib/src/checker/wikilink/: index.rs  mod.rs  resolver.rs
lychee-lib/src/client/: mod.rs
lychee-lib/src/extract/: css.rs  fragments.rs  html.rs  html5ever.rs  html5gum.rs  markdown.rs  mod.rs  pdf.rs  plaintext.rs  slugify.rs  xml.rs
lychee-lib/src/extract/html/: fragdirtok.rs  html5ever.rs  html5gum.rs  mod.rs  srcset.rs
lychee-lib/src/filter/: excludes.rs  includes.rs  mod.rs  regex_filter.rs
lychee-lib/src/helpers/: mod.rs  path.rs  request.rs  reqwest.rs  string.rs  tlds.rs  url.rs
lychee-lib/src/quirks/: mod.rs
lychee-lib/src/ratelimit/: config.rs  error.rs  headers.rs  mod.rs  pool.rs  window.rs
lychee-lib/src/ratelimit/host/: host.rs  interval.rs  key.rs  mod.rs  stats.rs
lychee-lib/src/textfrag/: mod.rs
lychee-lib/src/textfrag/extract/: fragdirtok.rs  mod.rs
lychee-lib/src/textfrag/types/: blockcontent.rs  error.rs  fragdirective.rs  kind.rs  mod.rs  status.rs  textdirective.rs  url.rs
lychee-lib/src/types/: base.rs  base_info.rs  basic_auth.rs  cache.rs  cookies.rs  error.rs  file.rs  hints.rs  input.rs  mail.rs  markdown_flavor.rs  methods.rs  mod.rs  path_excludes.rs  raw_uri.rs  redirect_history.rs  redirect_tracker.rs  remap_history.rs  request.rs  request_error.rs  resolver.rs  response.rs  root_dir.rs  sitemap.rs  status.rs  status_code_selector.rs  text_fragment.rs  uri.rs  url_extractor.rs
lychee-lib/src/types/accept/: mod.rs  range.rs  selector.rs
lychee-lib/src/types/basic_auth/: credentials.rs  mod.rs  selector.rs
lychee-lib/src/types/input/: content.rs  input.rs  mod.rs  resolver.rs  source.rs  windows_path.rs
lychee-lib/src/types/preprocessor/: mod.rs
lychee-lib/src/types/status_code/: excluder.rs  mod.rs  selector.rs
lychee-lib/src/types/uri/: error.rs  github.rs  mod.rs  parsed.rs  raw.rs  relative.rs  valid.rs
lychee-lib/src/utils/: anti_bot.rs  fragment_checker.rs  mod.rs  path.rs  request.rs  reqwest.rs  url.rs  wikilink_checker.rs
lychee-lib/src/utils/cache/: entry.rs  mod.rs
lychee-lib/src/utils/fragment_checker/: mod.rs  parsed_fragment.rs  text.rs
test-utils/: Cargo.toml
test-utils/src/: dir_builder.rs  lib.rs
(+171 files in other folders)
