[package]
authors = ["Matthias Endler <matthias-endler.de>"]
description = "A glorious link checker"
documentation = "https://github.com/lycheeverse/lychee/blob/master/README.md"
edition = "2018"
homepage = "https://github.com/lycheeverse/lychee"
keywords = [
    "link",
    "checker",
    "cli",
    "link-checker",
    "validator",
]
license = "Apache-2.0/MIT"
name = "lychee"
repository = "https://github.com/lycheeverse/lychee"
version = "0.5.0"

[dependencies]
anyhow = "1.0.37"
futures = "0.3.9"
glob = "0.3.0"
http = "0.2.2"
hubcaps = "0.6.2"
linkify = "0.4.0"
regex = "1.4.3"
url = "2.2.0"
check-if-email-exists = "0.8.17"
indicatif = "0.15.0"
structopt = "0.3.21"
toml = "0.5.8"
serde = { version = "1.0.118", features = ["derive"] }
pulldown-cmark = "0.8.0"
html5ever = "0.25"
markup5ever = "0.10"
markup5ever_rcdom = "0.1"
headers = "0.3.2"
derive_builder = "0.9.0"
deadpool = "0.7.0"
shellexpand = "2.1.0"
lazy_static = "1.4.0"
wiremock = "0.4.3"
openssl-sys = "0.9.60"
serde_json = "1.0.61"

[dependencies.reqwest]
features = ["gzip"]
version = "0.11.0"

[dependencies.tokio]
features = ["full"]
version = "1.0.1"

[dev-dependencies]
assert_cmd = "1.0.2"
predicates = "1.0.6"
uuid = { version = "0.8.2", features = ["v4"] }
tempfile = "3.1.0"

[features]
vendored-openssl = ["openssl-sys/vendored"]
