[package]
authors = ["Matthias Endler <matthias@endler.dev>"]
description = "A glorious link checker"
documentation = "https://github.com/lycheeverse/lychee/blob/master/README.md"
edition = "2018"
homepage = "https://github.com/lycheeverse/lychee"
keywords = [
    "link",
    "checker",
    "cli",
    "link-checker",
    "validator",
]
license = "Apache-2.0/MIT"
name = "lychee"
repository = "https://github.com/lycheeverse/lychee"
version = "0.6.0"

[dependencies]
anyhow = "1.0.38"
futures = "0.3.13"
glob = "0.3.0"
http = "0.2.3"
hubcaps = "0.6.2"
linkify = "0.5.0"
regex = "1.4.5"
url = "2.2.1"
check-if-email-exists = "0.8.19"
indicatif = "0.15.0"
structopt = "0.3.21"
toml = "0.5.8"
serde = { version = "1.0.124", features = ["derive"] }
pulldown-cmark = "0.8.0"
html5ever = "0.25.1"
markup5ever = "0.10.0"
markup5ever_rcdom = "0.1.0"
headers = "0.3.4"
derive_builder = "0.9.0"
deadpool = "0.7.0"
shellexpand = "2.1.0"
lazy_static = "1.4.0"
wiremock = "0.5.1"
openssl-sys = "0.9.61"
serde_json = "1.0.64"
# Make build work on Apple Silicon.
# See https://github.com/briansmith/ring/issues/1163
# This is necessary for the homebrew build
# https://github.com/Homebrew/homebrew-core/pull/70216
ring = "0.16.20"
pad = "0.1.6"
console = "0.14.1"
fast_chemail = "0.9.6"

[dependencies.reqwest]
features = ["gzip"]
version = "0.11.2"

[dependencies.tokio]
features = ["full"]
version = "1.3.0"

[patch.crates-io]
# Switch to version on crates.io after resolving
# https://github.com/async-email/async-smtp/issues/40 and new version of
# check-if-email-exists is released
check-if-email-exists = { git = "https://github.com/reacherhq/check-if-email-exists.git" }
# Switch back to version on crates.io after 0.6.3+ is released
hubcaps = { git="https://github.com/softprops/hubcaps.git" }

[dev-dependencies]
assert_cmd = "1.0.3"
predicates = "1.0.7"
uuid = { version = "0.8.2", features = ["v4"] }
tempfile = "3.2.0"
doc-comment = "0.3.3"

[features]
vendored-openssl = ["openssl-sys/vendored"]
