[workspace]
members = [
    "lychee-bin",
    "lychee-lib",
]
resolver = "2"

[patch.crates-io]
# Switch back to version on crates.io after 0.6.3+ is released
hubcaps = { git="https://github.com/softprops/hubcaps.git" }
# Switch back to version on crates.io after 0.14.1+ is released
console = { git="https://github.com/mitsuhiko/console.git" }
