[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "lychee-bin"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = [
    "version",
    "description",
    "keywords",
    "authors",
    "urls",
    "readme",
    "license",
]

[tool.maturin]
bindings = "bin"
manifest-path = "lychee-bin/Cargo.toml"
