[package]
name = "benches"
version = "0.0.0"
authors = ["Matthias Endler <matthias@endler.dev>"]
license = "Apache-2.0/MIT"
description = "Criterion benchmarks of the lychee crates"
edition = "2021"
publish = false

[dependencies]
lychee-lib = { path = "../lychee-lib"}
# TODO: Move back to crates.io version once
# https://github.com/bheisler/criterion.rs/pull/602
# got released
criterion = { git = "https://github.com/bheisler/criterion.rs"}

[[bench]]
name = "extract"
path = "src/extract.rs"
harness = false
