[package]
name = "benches"
version = "0.0.0"
authors = ["Matthias Endler <matthias@endler.dev>"]
license = "Apache-2.0/MIT"
description = "Criterion benchmarks of the lychee crates"
edition = "2021"
publish = false

[dependencies]
lychee-lib = { path = "../lychee-lib", default-features = false }
# TODO: Move back to crates.io version once
# https://github.com/bheisler/criterion.rs/pull/602
# got released
criterion = { git = "https://github.com/bheisler/criterion.rs"}

[features]
email-check = ["lychee-lib/email-check"]
native-tls = ["lychee-lib/native-tls"]
rustls-tls = ["lychee-lib/rustls-tls"]
default = ["native-tls", "email-check"]

[[bench]]
name = "extract"
path = "src/extract.rs"
harness = false
