[package]
name = "benches"
version = "0.0.0"
authors = ["Matthias Endler <matthias@endler.dev>"]
license = "Apache-2.0/MIT"
description = "Criterion benchmarks of the lychee crates"
edition = "2024"
publish = false

[dependencies]
lychee-lib = { path = "../lychee-lib", default-features = false }
criterion = "0.8.0"
tokio = "1.48.0"

[features]
email-check = ["lychee-lib/email-check"]
native-tls = ["lychee-lib/native-tls"]
rustls-tls = ["lychee-lib/rustls-tls"]
default = ["native-tls", "email-check"]

[[bench]]
name = "extract"
path = "src/extract.rs"
harness = false
