[package]
name = "lychee"
authors = ["Matthias Endler <matthias@endler.dev>", "Thomas Zahner <thomas.zahner@protonmail.ch>"]
description = "A fast, async link checker"
documentation = "https://docs.rs/lychee"
homepage = "https://github.com/lycheeverse/lychee"
edition = "2024"
keywords = ["link", "checker", "cli", "link-checker", "validator"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/lycheeverse/lychee"
readme = "../README.md"
version.workspace = true
rust-version = "1.88.0"

[dependencies]
# NOTE: We need to specify the version of lychee-lib here because crates.io
# requires all dependencies to have a version number.
lychee-lib = { path = "../lychee-lib", version = "0.21.0", default-features = false }

anyhow = "1.0.100"
assert-json-diff = "2.0.2"
clap = { version = "4.5.50", features = ["env", "derive", "cargo", "string"] }
clap_mangen = "0.2.31"
console = "0.16.1"
const_format = "0.2.35"
csv = "1.4.0"
dashmap = { version = "6.1.0", features = ["serde"] }
env_logger = "0.11.8"
futures = "0.3.31"
headers = "0.4.1"
http = "1.3.1"
http-serde = "2.1.1"
humantime = "2.3.0"
humantime-serde = "1.1.1"
numeric-sort = "0.1.5"
indicatif = "0.18.1"
log = "0.4.28"
openssl-sys = { version = "0.9.110", optional = true }
pad = "0.1.6"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = [
    "gzip",
    "json",
] }

reqwest_cookie_store = { version = "0.9.0", features = ["serde"] }
# Make build work on Apple Silicon.
# See https://github.com/briansmith/ring/issues/1163
# This is necessary for the homebrew build
# https://github.com/Homebrew/homebrew-core/pull/70216
ring = "0.17.14"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
supports-color = "3.0.2"
tabled = "0.20.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
toml = "0.9.8"
url = "2.5.7"


[dev-dependencies]
assert_cmd = "2.0.17"
cookie_store = "0.22.0"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
tempfile = "3.23.0"
test-utils = { path = "../test-utils" }
tracing-subscriber = { version = "0.3.20", default-features = false, features = [
    "fmt",
    "registry",
    "env-filter",
] }
uuid = { version = "1.18.1", features = ["v4"] }
wiremock = "0.6.5"

[features]

# Compile and statically link a copy of OpenSSL.
vendored-openssl = ["openssl-sys/vendored"]

# Allow checking example domains such as example.com.
check_example_domains = ["lychee-lib/check_example_domains"]

# Enable checking email addresses. Requires the native-tls feature.
email-check = ["lychee-lib/email-check"]

# Use platform-native TLS.
native-tls = ["lychee-lib/native-tls", "openssl-sys", "reqwest/native-tls"]

# Use Rustls TLS.
rustls-tls = ["lychee-lib/rustls-tls", "reqwest/rustls-tls-native-roots"]

default = ["native-tls", "email-check"]

# Unfortunately, it's not possible to automatically enable features for cargo
# test. See rust-lang/cargo#2911. As a workaround we introduce a new feature to
# allow example domains in integration tests.
[[test]]
name = "cli"
path = "tests/cli.rs"
required-features = ["check_example_domains"]

# Metadata for cargo-binstall to get the right artifacts
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
