[package]
name = "lychee-lib"
authors = ["Matthias Endler <matthias@endler.dev>", "Thomas Zahner <thomas.zahner@protonmail.ch>"]
description = "A fast, async link checker"
documentation = "https://docs.rs/lychee_lib"
edition = "2024"
homepage = "https://github.com/lycheeverse/lychee"
keywords = ["link", "checker", "cli", "link-checker", "validator"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/lycheeverse/lychee"
readme = "../README.md"
version.workspace = true
rust-version = "1.88.0"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.88"
cached = "0.56.0"
cookie_store = "0.22.0"
dashmap = { version = "6.1.0" }
email_address = "0.2.9"
futures = "0.3.31"
glob = "0.3.3"
governor = "0.10.4"
headers = "0.4.1"
html5ever = "0.38.0"
html5gum = "0.8.3"
http = "1.4.0"
httpdate = "1.0.3"
humantime-serde = "1.1.1"
hyper = "1.8.1"
ignore = "0.4.25"
ip_network = "0.4.1"
linkify = "0.10.0"
log = "0.4.28"
mailify-lib = { version = "0.2.0", optional = true }
octocrab = { version = "0.49.5", default-features = false, features = [
    "default-client",
    "follow-redirect",
    "jwt-rust-crypto",
    "retry",
    "rustls",
    # "rustls-ring",
    # Enabling `rustls-ring` leads to runtime panics.
    # This is covered by `test_github_client_integration`.
    "timeout",
    "tracing",
] }
path-clean = "1.0.1"
percent-encoding = "2.3.1"
pulldown-cmark = "0.13.0"
regex = "1.12.2"
reqwest = { version = "0.13.2", features = ["json", "gzip"] }
reqwest_cookie_store = { version = "0.10.0", features = ["serde"] }
# Make build work on Apple Silicon.
# See https://github.com/briansmith/ring/issues/1163
# This is necessary for the homebrew build
# https://github.com/Homebrew/homebrew-core/pull/70216
ring = "0.17.14"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.16.1"
shellexpand = "3.1.1"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
typed-builder = "0.23.2"
url = { version = "2.5.8", features = ["serde"] }
walkdir = "2.5.0"

[dependencies.par-stream]
version = "0.10.2"
features = ["runtime-tokio"]

[dev-dependencies]
doc-comment = "0.3.4"
pretty_assertions = "1.4.1"
rstest = "0.26.1"
serde_json = "1.0.149"
tempfile = "3.24.0"
test-utils = { path = "../test-utils" }
toml = "0.9.11"
wiremock = "0.6.5"

[features]

# Enable checking email addresses.
email-check = ["mailify-lib"]

# Feature flag to include checking reserved example domains
# as per RFC 2606, section 3.
# This flag is off by default and only exists to allow example domains in
# integration tests, which don't respect `#[cfg(test)]`.
# See https://users.rust-lang.org/t/36630
check_example_domains = []

default = ["email-check"]
