[package]
name = "archive"
version = "0.1.0"
edition = "2024"

[[example]]
name = "archive"
path = "archive.rs"

[dependencies]
lychee-lib = { path = "../../lychee-lib", default-features = false }
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"

[features]
email-check = ["lychee-lib/email-check"]
native-tls = ["lychee-lib/native-tls"]
rustls-tls = ["lychee-lib/rustls-tls"]
default = ["native-tls", "email-check"]
