[package]
name = "builder"
version = "0.1.0"
edition = "2024"

[[example]]
name = "builder"
path = "builder.rs"

[dependencies]
lychee-lib = { path = "../../lychee-lib", default-features = false }
tokio = { version = "1.49.0", features = ["full"] }
regex = "1.12.3"
http = "1.4.0"
reqwest = { version = "0.13.1", default-features = false, features = ["gzip"] }

[features]
email-check = ["lychee-lib/email-check"]
native-tls = ["lychee-lib/native-tls", "reqwest/native-tls"]
rustls-tls = ["lychee-lib/rustls-tls", "reqwest/rustls"]
default = ["native-tls", "email-check"]
