[package]
name = "builder"
version = "0.1.0"
edition = "2024"

[[example]]
name = "builder"
path = "builder.rs"

[dependencies]
lychee-lib = { path = "../../lychee-lib", default-features = false }
tokio = { version = "1.49.0", features = ["full"] }
regex = "1.12.2"
http = "1.4.0"
reqwest = "0.13.2"

[features]
email-check = ["lychee-lib/email-check"]
default = []
