[package]
name = "chain"
version = "0.1.0"
edition = "2024"

[[example]]
name = "chain"
path = "chain.rs"

[dependencies]
async-trait = "0.1.88"
lychee-lib = { path = "../../lychee-lib", default-features = false }
reqwest = { version = "0.12.24", default-features = false }
tokio = { version = "1.48.0", features = ["full"] }

[features]
email-check = ["lychee-lib/email-check"]
default = []
