[package]
name = "chain"
version = "0.1.0"
edition = "2024"

[[example]]
name = "chain"
path = "chain.rs"

[dependencies]
async-trait = "0.1.88"
lychee-lib = { path = "../../lychee-lib", default-features = false }
reqwest = "0.12.28"
tokio = { version = "1.49.0", features = ["full"] }

[features]
email-check = ["lychee-lib/email-check"]
native-tls = ["lychee-lib/native-tls"]
rustls-tls = ["lychee-lib/rustls-tls"]
default = ["native-tls", "email-check"]
