[package]
name = "client_pool"
version = "0.1.0"
edition = "2021"

[[example]]
name = "client_pool"
path = "client_pool.rs"

[dependencies]
futures = "0.3.28"
tokio-stream = "0.1.14"
lychee-lib = { path = "../../lychee-lib", version = "0.13.0", default-features = false }
tokio = { version = "1.32.0", features = ["full"] }

[features]
email-check = ["lychee-lib/email-check"]
native-tls = ["lychee-lib/native-tls"]
rustls-tls = ["lychee-lib/rustls-tls"]
default = ["native-tls", "email-check"]
