[package]
name = "client_pool"
version = "0.1.0"
edition = "2021"

[[example]]
name = "client_pool"
path = "client_pool.rs"

[dependencies]
futures = "0.3.31"
tokio-stream = "0.1.16"
lychee-lib = { path = "../../lychee-lib", default-features = false }
tokio = { version = "1.41.0", features = ["full"] }

[features]
email-check = ["lychee-lib/email-check"]
native-tls = ["lychee-lib/native-tls"]
rustls-tls = ["lychee-lib/rustls-tls"]
default = ["native-tls", "email-check"]
