[package]
name = "collect_links"
version = "0.1.0"
edition = "2024"

[[example]]
name = "collect_links"
path = "collect_links.rs"

[dependencies]
lychee-lib = { path = "../../lychee-lib",  default-features = false }
tokio = { version = "1.45.1", features = ["full"] }
regex = "1.11.1"
http = "1.3.1"
tokio-stream = "0.1.17"
reqwest = { version = "0.12.15", default-features = false, features = ["gzip"] }

[features]
email-check = ["lychee-lib/email-check"]
native-tls = ["lychee-lib/native-tls", "reqwest/native-tls"]
rustls-tls = ["lychee-lib/rustls-tls", "reqwest/rustls-tls-native-roots"]
default = ["native-tls", "email-check"]
