[package]
name = "collect_links"
version = "0.1.0"
edition = "2024"

[[example]]
name = "collect_links"
path = "collect_links.rs"

[dependencies]
lychee-lib = { path = "../../lychee-lib",  default-features = false }
tokio = { version = "1.48.0", features = ["full"] }
regex = "1.12.2"
http = "1.4.0"
tokio-stream = "0.1.17"
reqwest = { version = "0.12.24", default-features = false, features = ["gzip"] }

[features]
email-check = ["lychee-lib/email-check"]
native-tls = ["lychee-lib/native-tls", "reqwest/native-tls"]
rustls-tls = ["lychee-lib/rustls-tls", "reqwest/rustls-tls-native-roots"]
default = ["native-tls", "email-check"]
