[package]
name = "extract"
version = "0.1.0"
edition = "2024"

[[example]]
name = "extract"
path = "extract.rs"

[dependencies]
lychee-lib = { path = "../../lychee-lib", default-features = false }
tokio = { version = "1.49.0", features = ["full"] }

[features]
email-check = ["lychee-lib/email-check"]
native-tls = ["lychee-lib/native-tls"]
rustls-tls = ["lychee-lib/rustls-tls"]
default = ["native-tls", "email-check"]
